modificacao na classe ExecutorConfig - colocando a propriedade newVirtualThreadPerTaskExecutor para criar uma nova Thread a cada tarefa executada por minuto